# hello-amethyst-platformer

./: .gitignore  Cargo.toml  tiled-export-script.py  vimrc
resources/: map.json
resources/config/: bindings.ron  settings.ron
resources/textures/: platformer_tileset.ron  spritesheet.old.ron  spritesheet.ron  spritesheet_player.ron  spritesheet_two.ron
resources/ui/: pause_button.ron
src/: custom_game_data.rs  main.rs  settings.rs  world_helpers.rs
src/components/: check_collision.rs  collision.rs  decrease_velocity.rs  gravity.rs  jump_recharge.rs  max_velocity.rs  mod.rs  player.rs  push.rs  pushable.rs  scale.rs  scale_once.rs  size.rs  solid.rs  velocity.rs
src/game/: mod.rs  spritesheets.rs
src/game/states/: ingame.rs  mod.rs  paused.rs  startup.rs
src/game/states/startup/: map_loader.rs  mod.rs
src/geo/: axis.rs  collision.rs  mod.rs  side.rs
src/geo/collision/: collision_grid.rs  collision_rect.rs  mod.rs
src/systems/: camera.rs  collision.rs  control_player.rs  debug.rs  decrease_velocities.rs  gravity.rs  limit_velocities.rs  mod.rs  move_entities.rs  scale_sprites.rs
src/systems/ui_event_handlers/: mod.rs  pause.rs
