[package]
name = "hello-amethyst-platformer"
version = "0.1.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
ron      = "0.4.2"
serde    = { version = "1.0.89", features = ["derive"] }

[replace]
"lewton:0.9.4" = { git = "https://github.com/Noah2610/lewton", branch = "custom-0.9.3" } # cross-compilation to windows doesn't work with lewton 0.9.4

[profile.dev]
opt-level        = 1
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 16
incremental      = true
overflow-checks  = true

[profile.release]
opt-level        = 3
debug            = false
lto              = false
debug-assertions = false
codegen-units    = 1
incremental      = true
overflow-checks  = false
